deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-test-server
  labels:
    app: nginx-test-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-test-server
  template:
    metadata:
      labels:
        app: nginx-test-server
    spec:
      containers:
        - name: nginx-test-server
          image: nginx:latest
          ports:
            - containerPort: 80
