service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-test-server
spec:
  selector:
    app: nginx-test-server
  ports:
    - protocol: TCP
      port: 8071
      targetPort: 80
  type: ClusterIP
