ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-test-server-ingress
  namespace: nginx-test
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "public"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - nginx.siyal.nirmalsavinda.info
      secretName: tls-secret-express
  rules:
    - host: nginx.siyal.nirmalsavinda.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-test-server
                port:
                  number: 8071
